[project]
version      = "0.0.0"
name         = "tremeschin"
description  = ""
authors      = [{name="Tremeschin", email="29046864+Tremeschin@users.noreply.github.com"}]
readme       = "readme.md"
license      = "AGPL-3.0"
requires-python = ">=3.10"
dependencies = [
    "broken-source>=0.0.0",
]

[project.scripts]
tremeschin = "Tremeschin.__main__:main"
tremx      = "Tremeschin.__main__:main"

[tool.uv.workspace]
members = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["Tremeschin"]
