[project]
name         = "tremeschin"
description  = ""
version      = "0.0.0"
authors      = [{name="Tremeschin", email="29046864+Tremeschin@users.noreply.github.com"}]
readme       = "readme.md"
license      = "AGPL-3.0"
requires-python = ">=3.10"
dependencies = [
    "broken-source>=0.0.0",
]

[tool.uv.sources]
broken-source = {workspace=true}

[project.scripts]
tremeschin = "Tremeschin.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["Tremeschin"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
